--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,30 +13,23 @@ entries:
       - title: 我的公众号主页
         url: https://mp.weixin.qq.com/cgi-bin/home?t=home/index&token=1332527085&lang=zh_CN
 
-  - title: all posts
+  - title: 相关内容
     post_list:
       limit: 5
-      show_more: true
-      show_more_text: See archive...
+      show_more: false
+      show_more_text: ...more...
       show_more_url: archive.html
-
-  - title: posts by category
-    post_list:
-      category: example2
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: example2-archive.html
 
   - title: rss
     url: feed.xml
   
-  - title: another list
-    entries:
-      - title: with subitems
-        entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
-    entries:
-      - title: to edit this menu, edit _data/menu.yml file
+#   - title: another list
+#    entries:
+#      - title: with subitems
+#        entries:
+#          - title: with subsubitems
+#          - title: example page
+#            url: about
+#  - title: PRO TIP
+#    entries:
+#      - title: to edit this menu, edit _data/menu.yml file
