--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: 欢迎来到完颜侃数! # no style, please! # name of the site
 author: YinJC # Riccardo Graziosi # name of site's author
 email: yinjc@cjlu.edu.cn #riccardo.graziosi97@gmail.com # email of site's author
 url:  https://yinjc.github.io # https://riggraz.dev # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+baseurl: "" # "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   A (nearly) no-CSS, fast, minimalist Jekyll theme.
 
